--- a/sang.html
+++ b/sang.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Magic Blue</title>
+    <title>sysang</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,7 +23,7 @@
             <h3>Test Leanbot </h3>
 
             <button onclick="connect()" class="connect-button mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                <i class="material-icons">bluetooth</i> Connect
+                <i class="material-icons">bluetooth</i> SCAN
             </button>
 
             <!-- <div class="power-button hidden">
